ui-tests/tests/fail/wrong-macro.rs
use mic::solve;

#[solve]
fn main() -> _ {
    42
}
