ui-tests/tests/fail/wrong-macro.stderr
error[E0277]: `main` has invalid return type `String`
 --> tests/fail/wrong-macro.rs:3:1
  |
3 | #[solve]
  | ^^^^^^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`
  = note: this error originates in the attribute macro `solve` (in Nightly builds, run with -Z macro-backtrace for more info)
